Fix left shifting when scrollbar appears

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  overflow-y: overlay;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
